# seedstatus

./: .gitignore  CMakeLists.txt  README.md
include/: module.h  system.h  timer.h
include/modules/: audio.h  backlight.h  battery.h  cpu.h  date.h  gpu.h  memory.h  network.h  stdin.h  temp.h
src/: main.cpp  module.cpp  system.cpp  timer.cpp
src/modules/: audio.cpp  backlight.cpp  battery.cpp  cpu.cpp  date.cpp  gpu.cpp  memory.cpp  network.cpp  stdin.cpp  temp.cpp
